--- a/argocd/infrastructure/longhorn-application.yaml
+++ b/argocd/infrastructure/longhorn-application.yaml
@@ -15,9 +15,9 @@ spec:
     - repoURL: git@github.com:VizzleTF/home-proxmox-values.git
       targetRevision: HEAD
       ref: values
-    # - repoURL: git@github.com:VizzleTF/home-proxmox-values.git
-    #   path: manifests/longhorn
-    #   targetRevision: HEAD
+    - repoURL: git@github.com:VizzleTF/home-proxmox-values.git
+      path: manifests/longhorn
+      targetRevision: HEAD
   destination:
     server: https://kubernetes.default.svc
     namespace: longhorn-system
