--- a/argocd/applications/immich-application.yaml
+++ b/argocd/applications/immich-application.yaml
@@ -1,38 +1,33 @@
-# ArgoCD Application для Immich
-# Использует внешний Helm chart и values из репозитория
-
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: immich
   namespace: argocd
+  annotations:
+    argocd.argoproj.io/sync-wave: "2"
   finalizers:
-    - resources-finalizer.argocd.argoproj.io
+    - resources-finalizer.argocd.argoproj.io/background
 spec:
   project: default
   sources:
-    # Helm chart from public repository
     - repoURL: https://immich-app.github.io/immich-charts
       chart: immich
-      targetRevision: "*"  # Use latest version for automatic updates
+      targetRevision: "*"
       helm:
         valueFiles:
           - $values/applications/immich.yaml
-
     - repoURL: https://cloudnative-pg.github.io/charts
-      targetRevision: "*"
       chart: cluster
+      targetRevision: "*"
       helm:
         valueFiles:
           - $values/applications/cnpg-immich-db.yaml
-    # Values repository
     - repoURL: git@github.com:VizzleTF/home-proxmox-values.git
       targetRevision: HEAD
       ref: values
-    # Additional manifests
     - repoURL: git@github.com:VizzleTF/home-proxmox-values.git
-      path: manifests/immich
       targetRevision: HEAD
+      path: manifests/immich
   destination:
     server: https://kubernetes.default.svc
     namespace: immich
@@ -42,7 +37,7 @@ spec:
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
-      - RespectIgnoreDifferences=true
+      - ServerSideApply=true
     retry:
       limit: 5
       backoff:
