--- a/argocd/applications/onlyoffice-application.yaml
+++ b/argocd/applications/onlyoffice-application.yaml
@@ -1,23 +1,21 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: ingress-nginx
+  name: onlyoffice
   namespace: argocd
+  annotations:
+    argocd.argoproj.io/sync-wave: "3"
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io/background
 spec:
   project: default
   sources:
-    - repoURL: https://kubernetes.github.io/ingress-nginx
-      targetRevision: "*"
-      chart: ingress-nginx
-      helm:
-        valueFiles:
-          - $values/infrastructure/ingress-nginx.yaml
     - repoURL: git@github.com:VizzleTF/home-proxmox-values.git
       targetRevision: HEAD
-      ref: values
+      path: manifests/onlyoffice
   destination:
     server: https://kubernetes.default.svc
-    namespace: ingress-nginx
+    namespace: onlyoffice
   syncPolicy:
     automated:
       prune: true
@@ -25,3 +23,9 @@ spec:
     syncOptions:
       - CreateNamespace=true
       - ServerSideApply=true
+    retry:
+      limit: 5
+      backoff:
+        duration: 5s
+        factor: 2
+        maxDuration: 3m
