--- a/argocd/infrastructure/cilium-application.yaml
+++ b/argocd/infrastructure/cilium-application.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: cilium
   namespace: argocd
+  annotations:
+    argocd.argoproj.io/sync-wave: "-5" # CNI must be first
   finalizers:
     - resources-finalizer.argocd.argoproj.io/background
 spec:
