--- a/argocd/infrastructure/cnpg-operator-application.yaml
+++ b/argocd/infrastructure/cnpg-operator-application.yaml
@@ -3,14 +3,16 @@ kind: Application
 metadata:
   name: cnpg-operator
   namespace: argocd
+  annotations:
+    argocd.argoproj.io/sync-wave: "-2"
   finalizers:
     - resources-finalizer.argocd.argoproj.io/background
 spec:
   project: default
   sources:
     - repoURL: https://cloudnative-pg.github.io/charts
-      targetRevision: "*"
       chart: cloudnative-pg
+      targetRevision: "*"
       helm:
         valueFiles:
           - $values/infrastructure/cnpg-operator.yaml
