--- a/argocd/unused/kube-prometheus-stack-application.yaml
+++ b/argocd/unused/kube-prometheus-stack-application.yaml
@@ -3,11 +3,13 @@ kind: Application
 metadata:
   name: kube-prometheus-stack
   namespace: argocd
+  annotations:
+    argocd.argoproj.io/sync-wave: "0" # Monitoring after core infra
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
-  
+
   sources:
     # Kube-Prometheus-Stack Helm chart from public repository
     - repoURL: https://prometheus-community.github.io/helm-charts
@@ -16,28 +18,28 @@ spec:
       helm:
         valueFiles:
           - $values/infrastructure/kube-prometheus-stack.yaml
-    
+
     # Values repository
     - repoURL: git@github.com:VizzleTF/home-proxmox-values.git
       targetRevision: HEAD
       ref: values
-    
+
     # Additional manifests (ServiceMonitors, External Secrets, PVE Exporter)
     - repoURL: git@github.com:VizzleTF/home-proxmox-values.git
       path: manifests/prometheus
       targetRevision: HEAD
-  
+
   destination:
     server: https://kubernetes.default.svc
     namespace: prometheus
-  
+
   syncPolicy:
     automated:
       prune: true
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
-      - ServerSideApply=true  # Required for CRDs
+      - ServerSideApply=true # Required for CRDs
       - RespectIgnoreDifferences=true
     retry:
       limit: 5
@@ -45,16 +47,16 @@ spec:
         duration: 5s
         factor: 2
         maxDuration: 3m
-  
+
   revisionHistoryLimit: 3
   ignoreDifferences:
-  - group: apps
-    kind: Deployment
-    name: kube-prometheus-stack-grafana
-    jqPathExpressions:
-    - '.spec.template.spec.containers[] | select(.name == "grafana") | .env[]? | select(.valueFrom.resourceFieldRef) | .valueFrom.resourceFieldRef.divisor'
-  - group: apps
-    kind: StatefulSet
-    name: kube-prometheus-stack-grafana
-    jqPathExpressions:
-    - '.spec.template.spec.containers[] | select(.name == "grafana") | .env[]? | select(.valueFrom.resourceFieldRef) | .valueFrom.resourceFieldRef.divisor'
+    - group: apps
+      kind: Deployment
+      name: kube-prometheus-stack-grafana
+      jqPathExpressions:
+        - '.spec.template.spec.containers[] | select(.name == "grafana") | .env[]? | select(.valueFrom.resourceFieldRef) | .valueFrom.resourceFieldRef.divisor'
+    - group: apps
+      kind: StatefulSet
+      name: kube-prometheus-stack-grafana
+      jqPathExpressions:
+        - '.spec.template.spec.containers[] | select(.name == "grafana") | .env[]? | select(.valueFrom.resourceFieldRef) | .valueFrom.resourceFieldRef.divisor'
