--- a/argocd/unused/n8n-application.yaml
+++ b/argocd/unused/n8n-application.yaml
@@ -1,28 +1,30 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cnpg-rag
+  name: n8n
   namespace: argocd
+  annotations:
+    argocd.argoproj.io/sync-wave: "2" # User applications (needs CNPG)
   finalizers:
     - resources-finalizer.argocd.argoproj.io/background
 spec:
   project: default
   sources:
-    - repoURL: https://cloudnative-pg.github.io/charts
+    - repoURL: oci://8gears.container-registry.com/library/n8n
+      chart: n8n
       targetRevision: "*"
-      chart: cluster
       helm:
         valueFiles:
-          - $values/applications/cnpg-rag.yaml
+          - $values/applications/n8n.yaml
     - repoURL: git@github.com:VizzleTF/home-proxmox-values.git
       targetRevision: HEAD
       ref: values
     - repoURL: git@github.com:VizzleTF/home-proxmox-values.git
-      path: manifests/cnpg-rag
+      path: manifests/n8n
       targetRevision: HEAD
   destination:
     server: https://kubernetes.default.svc
-    namespace: cnpg-rag
+    namespace: n8n
   syncPolicy:
     automated:
       prune: true
