--- a/argocd/infrastructure/longhorn-application.yaml
+++ b/argocd/infrastructure/longhorn-application.yaml
@@ -11,7 +11,7 @@ spec:
   project: default
   sources:
     - repoURL: https://charts.longhorn.io
-      targetRevision: "*"
+      targetRevision: "1.10.0"
       chart: longhorn
       helm:
         valueFiles:
