--- a/argocd/root-application.yaml
+++ b/argocd/root-application.yaml
@@ -1,32 +1,27 @@
-# Root Application - App of Apps Pattern
-# This application manages all other ArgoCD applications
-# Deploy this manually first: kubectl apply -f root-application.yaml -n argocd
-
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: root
   namespace: argocd
   finalizers:
-    - resources-finalizer.argocd.argoproj.io
+    - resources-finalizer.argocd.argoproj.io/background
 spec:
   project: default
-
   sources:
-    # Infrastructure applications (deployed first via sync waves)
-    - repoURL: git@github.com:VizzleTF/home_proxmox.git
+    - repoURL: https://github.com/VizzleTF/home_proxmox.git
+      targetRevision: HEAD
       path: argocd/infrastructure
+    - repoURL: https://github.com/VizzleTF/home_proxmox.git
       targetRevision: HEAD
-
-    # User applications (deployed after infrastructure)
-    - repoURL: git@github.com:VizzleTF/home_proxmox.git
       path: argocd/applications
-      targetRevision: HEAD
-
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
-
+  ignoreDifferences:
+    - group: argoproj.io
+      kind: Application
+      jsonPointers:
+        - /status
   syncPolicy:
     automated:
       prune: true
@@ -40,12 +35,3 @@ spec:
         duration: 5s
         factor: 2
         maxDuration: 3m
-
-  # Ignore differences in child applications status
-  ignoreDifferences:
-    - group: argoproj.io
-      kind: Application
-      jsonPointers:
-        - /status
-
-  revisionHistoryLimit: 5
