--- a/argocd/applications/vaultwarden-application.yaml
+++ b/argocd/applications/vaultwarden-application.yaml
@@ -25,6 +25,12 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: vaultwarden
+  ignoreDifferences:
+    - group: apps
+      kind: StatefulSet
+      jqPathExpressions:
+        - .spec.volumeClaimTemplates[]?.apiVersion
+        - .spec.volumeClaimTemplates[]?.kind
   syncPolicy:
     automated:
       prune: true
@@ -32,6 +38,7 @@ spec:
     syncOptions:
       - CreateNamespace=true
       - ServerSideApply=true
+      - RespectIgnoreDifferences=true
     retry:
       limit: 5
       backoff:
