chore: Pin CloudNativePG chart to 0.4.0 and ignore nodePort differences for Longhorn services

--- a/argocd/applications/immich-application.yaml
+++ b/argocd/applications/immich-application.yaml
@@ -18,7 +18,7 @@ spec:
           - $values/applications/immich.yaml
     - repoURL: https://cloudnative-pg.github.io/charts
       chart: cluster
-      targetRevision: "*"
+      targetRevision: "0.4.0"
       helm:
         valueFiles:
           - $values/applications/cnpg-immich-db.yaml
