--- a/argocd/applications/cnpg-application.yaml
+++ b/argocd/applications/cnpg-application.yaml
@@ -12,7 +12,7 @@ spec:
   sources:
     - repoURL: https://cloudnative-pg.github.io/charts
       chart: cluster
-      targetRevision: "*"
+      targetRevision: "0.4.0"
       helm:
         valueFiles:
           - $values/applications/cnpg.yaml
