feat: add vaultwarden backup manifests to application

--- a/argocd/applications/vaultwarden-application.yaml
+++ b/argocd/applications/vaultwarden-application.yaml
@@ -22,6 +22,9 @@ spec:
     - repoURL: git@github.com:VizzleTF/home-proxmox-values.git
       targetRevision: HEAD
       path: manifests/vaultwarden-backup
+    - repoURL: git@github.com:VizzleTF/home-proxmox-values.git
+      targetRevision: HEAD
+      path: manifests/vaultwarden
   destination:
     server: https://kubernetes.default.svc
     namespace: vaultwarden
