chore: Add gateway.networking.k8s.io HTTPRoute to ArgoCD ignoreDifferences

--- a/argocd/applications/vault-application.yaml
+++ b/argocd/applications/vault-application.yaml
@@ -34,6 +34,12 @@ spec:
         - /spec/volumeClaimTemplates/0/kind
         - /spec/volumeClaimTemplates/1/apiVersion
         - /spec/volumeClaimTemplates/1/kind
+    - group: gateway.networking.k8s.io
+      kind: HTTPRoute
+      jqPathExpressions:
+        - .spec.rules[]?.backendRefs[]?.group
+        - .spec.rules[]?.backendRefs[]?.kind
+        - .spec.rules[]?.backendRefs[]?.weight
   syncPolicy:
     automated:
       prune: true
