--- a/argocd/applications/nextcloud-application.yaml
+++ b/argocd/applications/nextcloud-application.yaml
@@ -31,6 +31,13 @@ spec:
       name: nextcloud-postgresql
       jqPathExpressions:
         - .data
+    - group: gateway.networking.k8s.io
+      kind: HTTPRoute
+      jqPathExpressions:
+        - .spec.rules[]?.backendRefs[]?.group
+        - .spec.rules[]?.backendRefs[]?.kind
+        - .spec.rules[]?.backendRefs[]?.weight
+        - .spec.rules[]?.filters[]?.type
   syncPolicy:
     automated:
       prune: true
