--- a/argocd/applications/vaultwarden-application.yaml
+++ b/argocd/applications/vaultwarden-application.yaml
@@ -34,6 +34,12 @@ spec:
       jqPathExpressions:
         - .spec.volumeClaimTemplates[]?.apiVersion
         - .spec.volumeClaimTemplates[]?.kind
+    - group: gateway.networking.k8s.io
+      kind: HTTPRoute
+      jqPathExpressions:
+        - .spec.rules[]?.backendRefs[]?.group
+        - .spec.rules[]?.backendRefs[]?.kind
+        - .spec.rules[]?.backendRefs[]?.weight
   syncPolicy:
     automated:
       prune: true
