--- a/argocd/infrastructure/argocd-application.yaml
+++ b/argocd/infrastructure/argocd-application.yaml
@@ -15,13 +15,13 @@ spec:
       targetRevision: "*"
       helm:
         valueFiles:
-          - $values/infrastructure/argocd.yaml
+          - $values/values/infrastructure/argocd.yaml
     - repoURL: git@github.com:VizzleTF/home-proxmox-values.git
       targetRevision: HEAD
       ref: values
     - repoURL: git@github.com:VizzleTF/home-proxmox-values.git
       targetRevision: HEAD
-      path: manifests/argocd
+      path: manifests/infrastructure/argocd
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
