--- a/argocd/infrastructure/cert-manager-application.yaml
+++ b/argocd/infrastructure/cert-manager-application.yaml
@@ -15,13 +15,13 @@ spec:
       targetRevision: "*"
       helm:
         valueFiles:
-          - $values/infrastructure/cert-manager.yaml
+          - $values/values/infrastructure/cert-manager.yaml
     - repoURL: git@github.com:VizzleTF/home-proxmox-values.git
       targetRevision: HEAD
       ref: values
     - repoURL: git@github.com:VizzleTF/home-proxmox-values.git
       targetRevision: HEAD
-      path: manifests/cert-manager
+      path: manifests/infrastructure/cert-manager
   destination:
     server: https://kubernetes.default.svc
     namespace: cert-manager
