--- a/argocd/infrastructure/longhorn-application.yaml
+++ b/argocd/infrastructure/longhorn-application.yaml
@@ -15,12 +15,12 @@ spec:
       chart: longhorn
       helm:
         valueFiles:
-          - $values/infrastructure/longhorn.yaml
+          - $values/values/infrastructure/longhorn.yaml
     - repoURL: git@github.com:VizzleTF/home-proxmox-values.git
       targetRevision: HEAD
       ref: values
     - repoURL: git@github.com:VizzleTF/home-proxmox-values.git
-      path: manifests/longhorn
+      path: manifests/infrastructure/longhorn
       targetRevision: HEAD
   destination:
     server: https://kubernetes.default.svc
