chore: Add HTTPRoute backendRefs ignore paths to cilium-application

--- a/argocd/infrastructure/cilium-application.yaml
+++ b/argocd/infrastructure/cilium-application.yaml
@@ -41,6 +41,12 @@ spec:
       name: hubble-server-certs
       jqPathExpressions:
         - .data
+    - group: gateway.networking.k8s.io
+      kind: HTTPRoute
+      jqPathExpressions:
+        - .spec.rules[]?.backendRefs[]?.group
+        - .spec.rules[]?.backendRefs[]?.kind
+        - .spec.rules[]?.backendRefs[]?.weight
   syncPolicy:
     automated:
       prune: true
