--- a/argocd/applications/rss-to-telegram-bot-application.yaml
+++ b/argocd/applications/rss-to-telegram-bot-application.yaml
@@ -21,7 +21,7 @@ spec:
       ref: values
   destination:
     server: https://kubernetes.default.svc
-    namespace: rss-to-telegram-bot
+    namespace: rsstt
   syncPolicy:
     automated:
       prune: true
