chore: update image repository for rss-to-telegram-bot

--- a/charts/rss-to-telegram-bot/values.yaml
+++ b/charts/rss-to-telegram-bot/values.yaml
@@ -3,7 +3,7 @@
 replicaCount: 1
 
 image:
-  repository: rongronggg9/rss-to-telegram
+  repository: ghcr.io/vizzletf/rss-to-telegram-bot-2
   pullPolicy: IfNotPresent
   tag: "dev" # Use "latest" for stable version
 
