fix: prevent ArgoCD out-of-sync for HTTPRoute backendRefs

--- a/argocd/applications/tracktor-application.yaml
+++ b/argocd/applications/tracktor-application.yaml
@@ -25,6 +25,13 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: tracktor
+  ignoreDifferences:
+    - group: gateway.networking.k8s.io
+      kind: HTTPRoute
+      jqPathExpressions:
+        - .spec.rules[]?.backendRefs[]?.group
+        - .spec.rules[]?.backendRefs[]?.kind
+        - .spec.rules[]?.backendRefs[]?.weight
   syncPolicy:
     automated:
       prune: true
@@ -32,6 +39,7 @@ spec:
     syncOptions:
       - CreateNamespace=true
       - ServerSideApply=true
+      - RespectIgnoreDifferences=true
     retry:
       limit: 5
       backoff:
