chore: ignore EndpointSlice conditions in ArgoCD sync

--- a/argocd/infrastructure/cilium-application.yaml
+++ b/argocd/infrastructure/cilium-application.yaml
@@ -41,6 +41,10 @@ spec:
       name: hubble-server-certs
       jqPathExpressions:
         - .data
+    - group: discovery.k8s.io
+      kind: EndpointSlice
+      jqPathExpressions:
+        - .endpoints[]?.conditions
     - group: gateway.networking.k8s.io
       kind: HTTPRoute
       jqPathExpressions:
