feat(charts): allow configurable deployment strategy
- Expose deployment strategy type option
- Add rollingUpdate configuration support
- Decouple strategy from persistence setting

--- a/charts/rss-to-telegram-bot/values.yaml
+++ b/charts/rss-to-telegram-bot/values.yaml
@@ -2,6 +2,10 @@
 
 replicaCount: 1
 
+# Deployment strategy
+strategy:
+  type: Recreate
+
 image:
   repository: ghcr.io/vizzletf/rss-to-telegram-bot-2
   pullPolicy: Always
