fix(argocd): ignore HTTPRoute backendRef diffs
- Ignore HTTPRoute backendRef group and kind
- Also ignore backendRef weight field
- Prevents Argo CD sync drift
- Addresses changes made by gateway controller

--- a/argocd/applications/openclaw-application.yaml
+++ b/argocd/applications/openclaw-application.yaml
@@ -25,6 +25,13 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: openclaw
+  ignoreDifferences:
+    - group: gateway.networking.k8s.io
+      kind: HTTPRoute
+      jqPathExpressions:
+        - .spec.rules[]?.backendRefs[]?.group
+        - .spec.rules[]?.backendRefs[]?.kind
+        - .spec.rules[]?.backendRefs[]?.weight
   syncPolicy:
     automated:
       prune: true
