--- a/argocd/infrastructure/victoria-metrics-k8s-stack-application.yaml
+++ b/argocd/infrastructure/victoria-metrics-k8s-stack-application.yaml
@@ -25,6 +25,24 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: victoria-metrics
+  ignoreDifferences:
+    - group: external-secrets.io
+      kind: ExternalSecret
+      jsonPointers:
+        - /status
+    - group: admissionregistration.k8s.io
+      kind: ValidatingWebhookConfiguration
+      jqPathExpressions:
+        - '.webhooks[]?.clientConfig.caBundle'
+    - group: ""
+      kind: Secret
+      name: victoria-metrics-k8s-stack-victoria-metrics-operator-validation
+      jsonPointers:
+        - /data
+    - group: gateway.networking.k8s.io
+      kind: HTTPRoute
+      jsonPointers:
+        - /status
   syncPolicy:
     automated:
       prune: true
