Add ignoreDifferences for HTTPRoute default fields

--- a/argocd/infrastructure/victoria-metrics-k8s-stack-application.yaml
+++ b/argocd/infrastructure/victoria-metrics-k8s-stack-application.yaml
@@ -59,6 +59,11 @@ spec:
         - /metadata/resourceVersion
         - /metadata/generation
         - /metadata/managedFields
+        - /spec/parentRefs/0/group
+        - /spec/parentRefs/0/kind
+        - /spec/rules/0/backendRefs/0/group
+        - /spec/rules/0/backendRefs/0/kind
+        - /spec/rules/0/backendRefs/0/weight
   syncPolicy:
     automated:
       prune: true
