--- a/argocd/applications/lampac-application.yaml
+++ b/argocd/applications/lampac-application.yaml
@@ -19,6 +19,9 @@ spec:
     - repoURL: git@github.com:VizzleTF/home-proxmox-values.git
       targetRevision: HEAD
       ref: values
+    - repoURL: git@github.com:VizzleTF/home-proxmox-values.git
+      targetRevision: HEAD
+      path: manifests/applications/lampac
   destination:
     server: https://kubernetes.default.svc
     namespace: lampac
